# rust-obs-plugins

./: Cargo.toml
.github/workflows/: build.yml
obs-sys/: Cargo.toml  build.rs
plugins/rnnoise-denoiser-filter/: Cargo.toml
plugins/rnnoise-denoiser-filter/src/: lib.rs
plugins/scroll-focus-filter/: Cargo.toml
plugins/scroll-focus-filter/src/: lib.rs  server.rs
src/: lib.rs  native_enum.rs  properties.rs
src/graphics/: mod.rs
src/media/: audio.rs  video.rs
src/output/: context.rs  ffi.rs  mod.rs
src/source/: ffi.rs  mod.rs
