[package]
name = "rnnoise-denoiser-filter"
version = "0.1.0"
authors = ["Bennett Hardwick <me@bennetthardwick.com>"]
edition = "2018"

[dependencies]
obs-wrapper = { path = "../..", version = "*" }

dasp = { version = "0.11.0", features = [
    "interpolate",
    "signal",
    "ring_buffer",
    "interpolate-linear",
] }
nnnoiseless = { version = "0.5.2", default-features = false }

[lib]
name = "rnnoisedenoiser"
crate-type = ["cdylib"]
