[package]
name = "scroll-focus-filter"
version = "0.1.0"
authors = ["Bennett Hardwick <me@bennetthardwick.com>"]
edition = "2018"

[dependencies]
obs-wrapper = { path = "../..", version = "*" }

crossbeam-channel = "0.5.15"
xcb = { version = "1.6.0", features = ["randr"] }
xcb-util = { version = "0.4.0", features = ["ewmh"] }

[lib]
name = "scrollfocus"
crate-type = ["cdylib"]
